--- a/config.gradle
+++ b/config.gradle
@@ -9,31 +9,39 @@ ext {
             applicationId    : "com.xjst.skysweety"
     ]
     dependencies = [
-            "support-v4"          : 'com.android.support:support-v4:25.3.1',
-            "appcompat-v7"        : 'com.android.support:appcompat-v7:25.3.1',
-            "recyclerview-v7"     : 'com.android.support:recyclerview-v7:25.3.1',
-            "cardview"            : 'com.android.support:cardview-v7:25.3.1',
+            "support-v4"            : 'com.android.support:support-v4:25.3.1',
+            "appcompat-v7"          : 'com.android.support:appcompat-v7:25.3.1',
+            "recyclerview-v7"       : 'com.android.support:recyclerview-v7:25.3.1',
+            "cardview"              : 'com.android.support:cardview-v7:25.3.1',
 
 
-            "glide-github"        : 'com.github.bumptech.glide:glide:3.6.0',
-            "glide-compiler"      : 'com.github.bumptech.glide:compiler:4.6.1',
-            "fastjson"            : 'com.alibaba:fastjson:1.2.46',
-            "retrofit"            : 'com.squareup.retrofit2:retrofit:2.3.0',
-            "retrofit-gson"       : 'com.squareup.retrofit2:converter-gson:2.3.0',
-            "retrofit-scalars"    : 'com.squareup.retrofit2:converter-scalars:2.3.0',
-            "retrofit-adapter"    : 'com.squareup.retrofit2:adapter-rxjava2:2.3.0',
-            "alibaba-api"         : 'com.alibaba:arouter-api:1.3.1',
-            "alibaba-arouter"     : 'com.alibaba:arouter-annotation:1.0.4',
-            "alibaba-compiler"    : 'com.alibaba:arouter-compiler:1.1.4',
-            "rxjava"              : 'io.reactivex.rxjava2:rxjava:2.1.10',
-            "rxandroid"           : 'io.reactivex.rxjava2:rxandroid:2.0.2',
-            "okhttp"              : 'com.squareup.okhttp3:okhttp:3.10.0',
-            "eventBus"            : 'org.greenrobot:eventbus:3.1.1',
-            "nineoldandroids"     : 'com.nineoldandroids:library:2.4.0',
-            "cardview"            : 'com.android.support:cardview-v7:25.3.1',
-            "greenDao"            : 'org.greenrobot:greendao:3.2.2',
-            "logging-interceptor" : 'com.squareup.okhttp3:logging-interceptor:3.3.1',
-            "butterknife"         : 'com.jakewharton:butterknife:8.8.1',
-            "butterknife-compiler": 'com.jakewharton:butterknife-compiler:8.8.1'
+            "glide-github"          : 'com.github.bumptech.glide:glide:3.6.0',
+            "glide-compiler"        : 'com.github.bumptech.glide:compiler:4.6.1',
+            "fastjson"              : 'com.alibaba:fastjson:1.2.46',
+            "retrofit"              : 'com.squareup.retrofit2:retrofit:2.3.0',
+            "retrofit-gson"         : 'com.squareup.retrofit2:converter-gson:2.3.0',
+            "retrofit-fastjson"     : 'org.ligboy.retrofit2:converter-fastjson-android:2.2.0',
+            "retrofit-scalars"      : 'com.squareup.retrofit2:converter-scalars:2.3.0',
+            "retrofit-adapter"      : 'com.squareup.retrofit2:adapter-rxjava2:2.3.0',
+            "alibaba-api"           : 'com.alibaba:arouter-api:1.3.1',
+            "alibaba-arouter"       : 'com.alibaba:arouter-annotation:1.0.4',
+            "alibaba-compiler"      : 'com.alibaba:arouter-compiler:1.1.4',
+            "rxjava"                : 'io.reactivex.rxjava2:rxjava:2.1.10',
+            "rxandroid"             : 'io.reactivex.rxjava2:rxandroid:2.0.2',
+            "rxLifecycle"           : 'com.trello.rxlifecycle2:rxlifecycle:2.2.1',
+            "rxLifecycle-android"   : 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1',
+            "rxLifecycle-components": 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1',
+            "rxNavi"                : 'com.trello.rxlifecycle2:rxlifecycle-navi:2.2.1',
+            "okhttp"                : 'com.squareup.okhttp3:okhttp:3.10.0',
+            "eventBus"              : 'org.greenrobot:eventbus:3.1.1',
+            "nineoldandroids"       : 'com.nineoldandroids:library:2.4.0',
+            "greenDao"              : 'org.greenrobot:greendao:3.2.2',
+            "textDrawable"          : 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1',
+            "takePhoto"             : 'com.jph.takephoto:takephoto_library:4.0.3',
+            "swipeLayout"           : 'com.github.jaychou2012:SwitchLayout:1.0.0.0',
+            "Luban"                 : 'top.zibin:Luban:1.1.3',
+            "logging-interceptor"   : 'com.squareup.okhttp3:logging-interceptor:3.3.1',
+            "butterknife"           : 'com.jakewharton:butterknife:8.8.1',
+            "butterknife-compiler"  : 'com.jakewharton:butterknife-compiler:8.8.1'
     ]
 }
