--- a/config.gradle
+++ b/config.gradle
@@ -1,19 +1,19 @@
 ext {
     android = [
-            compileSdkVersion: 25,
-            targetSdkVersion : 21,
+            compileSdkVersion: 26,
+            targetSdkVersion : 26,
             minSdkVersion    : 16,
             versionCode      : 1,
             versionName      : "1.0",
-            buildToolsVersion: "25.3.1",
+            buildToolsVersion: "26.0.2",
             applicationId    : "com.xjst.skysweety"
     ]
     dependencies = [
-            "support-v4"            : 'com.android.support:support-v4:25.3.1',
-            "appcompat-v7"          : 'com.android.support:appcompat-v7:25.3.1',
-            "recyclerview-v7"       : 'com.android.support:recyclerview-v7:25.3.1',
-            "cardview"              : 'com.android.support:cardview-v7:25.3.1',
-
+            "support-v4"            : 'com.android.support:support-v4:26.1.0',
+            "appcompat-v7"          : 'com.android.support:appcompat-v7:26.1.0',
+            "recyclerview-v7"       : 'com.android.support:recyclerview-v7:26.1.0',
+            "cardview"              : 'com.android.support:cardview-v7:26.1.0',
+            "design"                : 'com.android.support:design:26.1.0',
 
             "glide-github"          : 'com.github.bumptech.glide:glide:3.6.0',
             "glide-compiler"        : 'com.github.bumptech.glide:compiler:4.6.1',
@@ -42,6 +42,8 @@ ext {
             "Luban"                 : 'top.zibin:Luban:1.1.3',
             "logging-interceptor"   : 'com.squareup.okhttp3:logging-interceptor:3.3.1',
             "butterknife"           : 'com.jakewharton:butterknife:8.8.1',
-            "butterknife-compiler"  : 'com.jakewharton:butterknife-compiler:8.8.1'
+            "butterknife-compiler"  : 'com.jakewharton:butterknife-compiler:8.8.1',
+            "dexmaker"              : 'com.linkedin.dexmaker:dexmaker:2.16.0'
+//            "cglib-nodep"           : 'cglib:cglib-nodep:3.2.6'
     ]
 }
