update some code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         </activity>
         <activity android:name=".test.eventbus.TestBoardCastActivity"/>
         <activity android:name=".test.recycleviewvideo.dto.CameraActivity"/>
+        <activity android:name=".test.TestActivity" />
     </application>
 
 </manifest>
