--- a/publiclibrary/build.gradle
+++ b/publiclibrary/build.gradle
@@ -33,6 +33,10 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
